Fix overflow on popovers (closes #6)

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -50,6 +50,10 @@
   cursor: pointer;
 }
 
+.popover {
+  width: auto;
+}
+
 .popover dl.dl-horizontal {
   margin: 0;
 }
